--- a/src/main/resources/templates/review/reviewbook.html
+++ b/src/main/resources/templates/review/reviewbook.html
@@ -392,7 +392,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="preview-container col-md-7">
-                            <div id="review-book-info" class="d-flex align-items-center">
+                            <div id="review-book-info cursor-pointer" class="d-flex align-items-center">
                                 <div class="rounded-3 icon-img">
                                     <img id="review-book-cover" src="../assets/img/review_book_cover.jpg" alt="...">
                                 </div>
@@ -746,7 +746,6 @@
                     reviewId : reviewId
                 },
                 success : function (viewCount) {
-                    console.log(viewCount);
                     resolve();
                 },
                 error : function (err) {
@@ -818,6 +817,10 @@
                 }else {
                     $('.viewSwiper .swiper-controller').hide()
                 };
+
+                $('#review-book-info').off().click(function (){
+                    location.href = `../book?bookId=${findReview.reviewBookId}`;
+                })
             },
             error : function (){
                 alert("리뷰 정보 조회에 실패했습니다.")
